# equalizer

./: CMakeLists.txt  README.md  Wave.cpp  Wave.h  buttons.qrc  equalizer.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  pitcher.cpp  pitcher.h  pitcher1.cpp
